--- a/mainApp/templates/mainApp/test_html_page1.html
+++ b/mainApp/templates/mainApp/test_html_page1.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page 2</title>
+    <title>test page namber 1</title>
 </head>
 <body>
-<h1> Some text on third link</h1>
+    <h1> HTML page on first link </h1>
 
 </body>
 </html>
