--- a/mainApp/templates/mainApp/test_html_page2.html
+++ b/mainApp/templates/mainApp/test_html_page2.html
@@ -5,7 +5,7 @@
     <title>Page 2</title>
 </head>
 <body>
-<h1> Some text on third link</h1>
+<h2> some text on second link</h2>
 
 </body>
 </html>
